<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#111111"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:background="@color/colorPrimary" />

    <FrameLayout
        android:id="@+id/backgroundCalc"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/defaultBackroundImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription=""
            android:scaleType="fitXY"
            android:src="@drawable/voda"
            android:visibility="invisible"
            tools:ignore="HardcodedText"
            tools:src="@drawable/voda" />

        <ImageView
            android:id="@+id/backroundImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription=""
            android:scaleType="fitXY"
            android:visibility="visible"
            tools:ignore="HardcodedText" />

        <RelativeLayout
            android:id="@+id/calculator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">
            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:gravity="end"
                android:textSize="60sp"
                android:textColor="#FFFFFF"
                android:text="@string/button_zero"
                android:maxLines="1"
                android:background="#111111"/>
            <LinearLayout
                android:id="@+id/firstRowLayout"
                android:layout_below="@id/result"
                android:layout_toLeftOf="@id/btnDivision"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btnClear"
                    android:layout_weight="1"
                    android:text="@string/button_clear"
                    android:onClick="anyButtonClicked"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"/>
                <Button
                    android:id="@+id/btnPlusMinus"
                    android:layout_weight="1"
                    android:text="@string/button_plus_minus"
                    android:onClick="anyButtonClicked"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"/>
                <Button
                    android:id="@+id/btnPercent"
                    android:layout_weight="1"
                    android:text="@string/button_percent"
                    android:onClick="anyButtonClicked"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/secondRowLayout"
                android:layout_below="@id/firstRowLayout"
                android:layout_toLeftOf="@id/btnMultiplication"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btnSeven"
                    android:layout_weight="1"
                    android:text="@string/button_seven"
                    android:onClick="anyButtonClicked"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"/>
                <Button
                    android:id="@+id/btnEight"
                    android:layout_weight="1"
                    android:text="@string/button_eight"
                    android:onClick="anyButtonClicked"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"/>
                <Button
                    android:id="@+id/btnNine"
                    android:layout_weight="1"
                    android:text="@string/button_nine"
                    android:onClick="anyButtonClicked"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/thirdRowLayout"
                android:layout_below="@id/secondRowLayout"
                android:layout_toLeftOf="@id/btnMinus"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btnFore"
                    android:layout_weight="1"
                    android:text="@string/button_for"
                    android:onClick="anyButtonClicked"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"/>
                <Button
                    android:id="@+id/btnFive"
                    android:layout_weight="1"
                    android:text="@string/button_five"
                    android:onClick="anyButtonClicked"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"/>
                <Button
                    android:id="@+id/btnSix"
                    android:layout_weight="1"
                    android:text="@string/button_six"
                    android:onClick="anyButtonClicked"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/fourthRowLayout"
                android:layout_toLeftOf="@id/btnPlus"
                android:layout_below="@id/thirdRowLayout"
                android:layout_width="match_parent"
                android:weightSum="3"
                android:onClick="anyButtonClicked"
                android:gravity="center"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btnOne"
                    android:text="@string/button_one"
                    android:onClick="anyButtonClicked"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"/>
                <Button
                    android:id="@+id/btnTwo"
                    android:layout_weight="1"
                    android:text="@string/button_two"
                    android:onClick="anyButtonClicked"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"/>
                <Button
                    android:id="@+id/btnThree"
                    android:layout_weight="1"
                    android:text="@string/button_three"
                    android:onClick="anyButtonClicked"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/fifthRowLayout"
                android:layout_below="@id/fourthRowLayout"
                android:layout_toLeftOf="@id/btnSubmit"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btnZero"
                    android:layout_weight="2"
                    android:text="@string/button_zero"
                    android:onClick="anyButtonClicked"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"/>
                <Button
                    android:id="@+id/btnPoint"
                    android:layout_weight="1"
                    android:text="@string/button_point"
                    android:onClick="anyButtonClicked"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnDivision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/result"
                android:layout_weight="1"
                android:backgroundTint="#FF9800"
                android:text="@string/button_division"
                android:onClick="anyButtonClicked"
                android:textColor="#ECECEC"
                android:textSize="50sp" />

            <Button
                android:id="@+id/btnMultiplication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/btnDivision"
                android:layout_weight="1"
                android:backgroundTint="#FF9800"
                android:isScrollContainer="false"
                android:shadowColor="#FF9800"
                android:text="@string/button_multiplication"
                android:onClick="anyButtonClicked"
                android:textColor="#ECECEC"
                android:textSize="50sp" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/btnMultiplication"
                android:layout_weight="1"
                android:backgroundTint="#FF9800"
                android:text="@string/button_minus"
                android:onClick="anyButtonClicked"
                android:textColor="#ECECEC"
                android:textSize="50sp" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/btnMinus"
                android:layout_weight="1"
                android:backgroundTint="#FF9800"
                android:text="@string/button_plus"
                android:onClick="anyButtonClicked"
                android:textColor="#ECECEC"
                android:textSize="50sp" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/btnPlus"
                android:layout_weight="1"
                android:backgroundTint="#FF9800"
                android:text="@string/button_submit"
                android:onClick="anyButtonClicked"
                android:textColor="#ECECEC"
                android:textSize="50sp" />
        </RelativeLayout>
        <include layout="@layout/filename_input"/>
    </FrameLayout>
</LinearLayout>